check report final

--- a/lab_01/отчёт/03-intro.tex
+++ b/lab_01/отчёт/03-intro.tex
@@ -1,12 +1,24 @@
 % Введение
 \section*{Введение}
+
+\hspace{1.25cm}
 Цель лабораторной работы: исследовать алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна в матричной, рекурсивно-матричной и рекурсивной реализациях.
-Для достижения этой цели были поставлены следующие задачи:\\
+
+\vspace{0.25cm}
+Для достижения этой цели были поставлены следующие задачи:
+
 \begin{itemize}
-\item рассмотреть алгоритм вычисления расстояния Левенштейна
-\item рассмотреть алгоритм вычисления расстояния Дамерау-Левенштейна
-\item применить метод динамического программирования для матричных реализаций алгоритмов
-\item сравнить матричную, рекурсивно-матричную и рекурсивную реализации алгоритмов
-\item сравнить алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна
+
+\item рассмотреть алгоритм вычисления расстояния Левенштейна;
+
+\item рассмотреть алгоритм вычисления расстояния Дамерау-Левенштейна;
+
+\item применить метод динамического программирования для матричных реализаций алгоритмов;
+
+\item сравнить матричную, рекурсивно-матричную и рекурсивную реализации алгоритмов;
+
+\item сравнить алгоритмы вычисления расстояния Левенштейна и Дамерау-Левенштейна.
+
 \end{itemize}
+
 \newpage
