--- a/lab_01/отчёт/20-sources.tex
+++ b/lab_01/отчёт/20-sources.tex
@@ -1,4 +1,6 @@
 % Список литературы
+\renewcommand{\refname}{Список использованных источников}
+
 \begin{thebibliography}{9}
     \bibitem{process_time} Python Documentation. \textit{time.process\_time() - Документация по стандартной библиотеке Python}. Дата обращения: 03 сентября 2024 г. [Электронный ресурс]. Доступно по адресу: \url{https://docs-python.ru/standart-library/modul-time-python/funktsija-process-time-modulja-time/}
     
